код вставки текущего времени даты

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <div id="app"></div>
 
-  <div class="widget">
+  <!-- <div class="widget">
     <div class="widget__today">
       <div class="widget__date-block">
         <p class="widget__date">20 июн 2023</p>
@@ -81,7 +81,7 @@
         <p class="widget__day-temp">17.3°/11.2°</p>
       </li>
     </ul>
-  </div>
+  </div> -->
 </body>
 
 </html>
